--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 comrak = "0.18.0"
 serde_yaml = "0.9.21"
 serde = { version = "1.0", features = ["derive"] }
+walkdir = "2.3.3"
+chrono = { version = "0.4.24", features = ["serde"] }
+slug = "0.1.4"
