--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ comrak = "0.18.0"
 serde_yaml = "0.9.21"
 serde = { version = "1.0", features = ["derive"] }
 walkdir = "2.3.3"
-chrono = { version = "0.4.24", features = ["serde"] }
+chrono = "0.4"
 slug = "0.1.4"
