--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,7 @@
-[package]
-name = "pageturtle"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+    "pageturtle_core",
+    "pageturtle_cli",
+]
 
-[dependencies]
-comrak = "0.18.0"
-serde_yaml = "0.9.21"
-serde = { version = "1.0", features = ["derive"] }
-walkdir = "2.3.3"
-chrono = "0.4"
-slug = "0.1.4"
