--- a/pageturtle_core/assets/package.json
+++ b/pageturtle_core/assets/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "npx tailwindcss -i base.css  -o styles.css --watch --minify"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "tailwindcss": "^3.3.2"
