--- a/pageturtle_cli/Cargo.toml
+++ b/pageturtle_cli/Cargo.toml
@@ -3,7 +3,9 @@ name = "pageturtle_cli"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "pageturtle"
+path = "src/main.rs"
 
 [dependencies]
 clap = { version = "3", features = ["derive", "cargo"]}
